Fixed overlapping text issue

--- a/templates/mytemplate/html/com_projects/projects.css
+++ b/templates/mytemplate/html/com_projects/projects.css
@@ -233,7 +233,7 @@
 		display: block;
 		position: absolute;
 		margin-top: -2em;
-		margin-left: 1em;
+		margin-left: 4em;
 		font-size: 80%;
 		color: #b97d26;
 		padding: 0 1em;
